# FileSorter

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/Chunk/: AbstractChunk.h  Chunk.h  MultisetChunk.h
include/DataMerger/: MergeSorter.h
include/DataProvider/: AbstractFileDataProvider.h  MultisetDataProvider.h
include/DataSplitter/: SingleThreadSizeSplitter.h
include/DataWriter/: DataWriter.h
include/FileSplitter/: AbstractFileSplitter.h  SingleThreadSizeSplitter.h  SizeSingleThreadSplitter.h
src/: fileSorter.cpp  main.cpp
src/Chunk/: Chunk.cpp  MultisetChunk.h
src/FileSplitter/: SizeSingleThreadSplitter.cpp  SizeSingleThreadSplitter.h
test/: CMakeLists.txt  ChunkTest.cpp  DataMergerTest.cpp  DataSplitterTest.cpp  DataWriterTest.cpp  FileSplitterTest.cpp  MultisetChunkTest.cpp  MultisetDataProviderTest.cpp
test-data/: TestDataFileGenerator.cpp  TestDataFileGenerator.h  fileGenerator.h  filegenerator.cpp
